<resources>
    <string name="app_name" translatable="false">121FirstApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="facebook_app_id" translatable="false">317399495624020</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb317399495624020</string>

    <string name="bottom_sheet_option_Vehicle" translatable="false">Vehicle</string>

    <string name="bottom_sheet_option_Home" translatable="false">Home</string>

    <string name="bottom_sheet_option_Electronic" translatable="false">Electronic</string>

    <string name="bottom_sheet_option_Phone_and_Tablet" translatable="false">Phone and Tablet</string>

    <string name="bottom_sheet_option_Computer_and_Accessories" translatable="false">Computer and Accessories</string>
    <string name="title_sell">SELL</string>
    <string name="title_buy">BUY</string>
    <string name="title_rent">RENT</string>
    <string name="txt_search">Search</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search for Products, Brands and More</string>
    <string name="txt_dic">Product Discount</string>
    <string name="title_activity_main2">MaterialSearchBar C.S.A</string>
    <string name="txt_new">New Post</string>
    //Button

    <string name="btn_call">Call</string>
    <string name="btn_chat">Chat</string>
    <string name="btn_order">Order</string>
    <string name="btn_loand">Loan</string>

    <string name="txt_profile">Your Profile</string>
    <string name="txt_post">Your Post</string>
    <string name="txt_like">Your Like</string>
    <string name="txt_loan">Your Loan</string>
    <string name="txt_your_order">Your Product Order List</string>
    <string name="txt_report">Report</string>
    <string name="txt_language">Language</string>

    <string name="txt_approval">All Pending Approval</string>
    <string name="txt_orderlist">Product Order List</string>
    <string name="txt_loanlist">Pending Loan Approval</string>
    <string name="txt_postlist">Pending Product Posting</string>
    //frma_camera
    <string name="cm_toolbar">Post Ad</string>
    //detail
    <string name="cm_detail">Detail</string>
    <string name="hit_title">Title</string>
    <string name="hit_category">Category</string>
    <string name="hit_tax_type">Tax Type</string>
    <string name="hit_brand">Brand</string>
    <string name="hit_year">Year</string>
    <string name="hit_condition">Condition</string>
    <string name="hit_price">Price</string>
    <string name="hit_description">Description</string>
    //discount
    <string name="cm_discount">Discount</string>
    <string name="hit_discount_type">Descount Type</string>
    <string name="hit_discount_amount">Discount Amount</string>
    //contact
    <string name="cm_contact">Contact</string>
    <string name="hit_name">Name</string>
    <string name="hit_phone1">Phone 1</string>
    <string name="hit_phone2">Phone 2</string>
    <string name="hit_phone3">Phone 3</string>
    <string name="hit_email">E-mail</string>
    <string name="hit_Address">Address</string>
    <string name="hit_upload_to_contact">Upload this contact to profile</string>
    <string name="hit_btnsubmit">Submit</string>
    //edit account
    <string name="txt_account_setting">Account Setting</string>
    <string name="hit_fistname">Fist Name</string>
    <string name="hit_lastname">Last Name</string>
    <string name="hit_store">Store/Company Name</string>
    <string name="hit_about_shop">About Shop/Company</string>
    <string name="hit_wingnumber">Wing Account / Number</string>
    <string name="hit_wingaccount">Wing Account / Name</string>
    <string name="hit_dealer">Dealer</string>
    //frame account
    <string name="txt_upload">Upload</string>
    <string name="txtpost">Post</string>
    <string name="txtlond">Loan</string>
    <string name="txtpending">Pending</string>
    <string name="txtlike">Like</string>
    <string name="txtedit">Edit</string>
    <string name="txtdelete">Delete</string>

    <string name="txtprice">Price:</string>
    <string name="txtcondition">Condition:</string>
    <string name="txtamount_request">Amount Request:</string>

    //user acoout login
    <string name="title_Login" translatable="false">Login account</string>

    //user account registration

    <string name="title_registration">Register to post free ad</string>
    <string name="phone_number">Phone Number</string>
    <string name="email" translatable="false">Email</string>
    <string name="Password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="or">Or</string>
    <string name="register_by_facebook">Register by using your facebook account</string>
    //user account register facebook
    <string name="login_or_register">Login or Register with your phone number</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="connect_facebook">Quick Connect with Facebook</string>
    //create_loan_request
    <string name="title_fill_information">Fill in information</string>
    <string name="txt_clr_detail">DETAIL</string>
    <string name="hit_username">User Name</string>
    <string name="hit_gender">Gender</string>
    <string name="hit_age">Age</string>
    <string name="hit_job">Job</string>
    <string name="hit_mon_income">Monthly Average Income</string>
    <string name="hit_mon_expense">Monthly Average Expense</string>
    <string name="txt_clr_information">LOAN INFORMATION</string>
    <string name="hit_loan_amount">Loan Amount</string>
    <string name="hit_loan_duration">Loan Duration(month)</string>
    <string name="hit_purpos">Loan Purpose</string>
    <string name="hit_status">Status</string>
    <string name="hit_phone">Phone</string>
    <string name="txt_clr_supporting">LOAN SUPPORTING DOCUMENT</string>
    <string name="hit_state_id">State ID</string>
    <string name="hit_family_book">Family Book</string>
    <string name="hit_staffid">Staff ID/ Salary sip</string>
    <string name="hit_hourse">Hourse plant</string>

    <string name="btn_dw">Brand</string>
    <string name="br_honda">Honda</string>
    <string name="br_suzuki">Suzuki</string>
    <string name="br_yamaha">Yamaha</string>
    <string name="br_kawasaki">Kavasaki</string>

    <string name="txt_pro_discount">Product Discount</string>
    <string name="txt_new_post">New Posts</string>

    <string-array name="sp_brand">
        <item>Brand</item>
        <item>Honda</item>
        <item>Suzuki</item>
        <item>Yamaha</item>
        <item>Kavasaki</item>
    </string-array>
    <string-array name="sp_price">
        <item>Price</item>
        <item>$1</item>
        <item>$2</item>
        <item>$3</item>
        <item>$4</item>
    </string-array>
    <string-array name="sp_location">
        <item>Location</item>
        <item>PP</item>
        <item>KPC</item>
        <item>KPT</item>
    </string-array>
    <string-array name="kh_title">
        <item>ប្រភេទពន្ធ:</item>
        <item>ម៉ាក:</item>
        <item>ឆ្នាំផលិត:</item>
        <item>លក្ខខណ្ឌ:</item>
    </string-array>
</resources>
