<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/txt_profile" />
        <item
            android:id="@+id/nav_your_post"
            android:title="@string/txt_post" />
        <item
            android:id="@+id/nav_your_like"
            android:title="@string/txt_like" />
        <item
            android:id="@+id/nav_loan"
            android:title="@string/txt_loan" />
        <item
            android:id="@+id/nav_product_order"
            android:title="@string/txt_your_order" />
        <item
            android:id="@+id/nav_report"
            android:title="@string/txt_report" />
        <item
            android:id="@+id/nav_language"
            android:title="@string/txt_language" />
    </group>

</menu>