<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View_buying_request_item_detail">
    <ScrollView
        android:layout_marginBottom="55dp"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/include2"
                layout="@layout/detail_product_header" />
            <TextView
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="15dp"
                android:text="View 1000"
                android:textSize="8sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include2" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_call"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/shap_ratangle"
            android:text="@string/btn_call" />
        <Button
            android:id="@+id/btn_chat"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/shap_ratangle"
            android:text="@string/btn_chat" />
        <Button
            android:id="@+id/btn_order"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/shap_ratangle1"
            android:text="@string/btn_order" />
        <Button
            android:id="@+id/btn_loan"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/shap_ratangle1"
            android:text="@string/btn_loand"
            />
    </LinearLayout>
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="40dp"
        android:background="#72999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </android.support.v7.widget.Toolbar>
</RelativeLayout>
